# fastapi-shop

./: project_shema.txt  pyproject.toml
shop_app/: main.py
shop_app/core/: config.py  settings.py
shop_app/core/models/: base.py  db_helper.py  product.py
shop_app/models/: __init__.py  base.py  settings.py
